<resources>
    <string name="app_name">Aquamea</string>
    <string name="action_settings">Setări</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map">Map</string>
    <string name="drawer_item_map">Hartă</string>
    <string name="drawer_item_health_treatment">Despre sănătate și tratament</string>
    <string name="drawer_item_treatment">Despre tratament</string>
    <string name="drawer_item_about_app">Despre aplicație</string>
    <string name="title_activity_health_treatment">Despre sănătate și tratament</string>
    <string name="drawer_item_settings">Setări</string>
    <string name="title_activity_add_well">Add well</string>
    <string name="drawer_item_empty"> </string>
    <string-array name="photo_options">

        <item>Fotografiază</item>
        <item>Selectează o fotografie</item>
    </string-array>
    <string-array name="photo_options_plus_remove">

        <item>Fotografiază</item>
        <item>Selectează o fotografie</item>
        <item>Elimină fotografia selectată</item>
    </string-array>
    <string-array name="coordinates_options">
        <item>Marchează un punct pe hartă</item>
        <item>Depistează coordinatele GPS</item>
        <item>Introdu coordinatele GPS manual</item>
    </string-array>
    <string name="module_title_mark_a_point_on_map">Marchează un punct pe hartă</string>
    <string name="module_title_add_well">Adaugă o fîntînă</string>
    <string name="dialog_title_validation_error">Eroare de validare</string>
    <string name="validation_error_message_gps_coordinates_required">Coordonatele GPS ale fîntînii sunt obligatorii!</string>
    <string name="action_save">Salvează</string>
    <string name="dialog_title_enter_gps_coordinates">Introdu coordinatele GPS</string>
    <string name="dialog_title_gps_location_error">Eroare GPS coordinate</string>
    <string name="info_cannot_get_gps_coordiates">Nu este posibil de preluat automat coordonatele GPS în acest moment, vă rog verificați dacă serviciile de depistare a coordonatelor GPS sunt activate.</string>
    <string name="module_title_map">Hartă</string>
    <string name="info_well_added">Fîntîna a fost adăugată</string>
    <string name="info_gps_coordonates_was_set">Coordonatele GPS au fost setate</string>
    <string name="module_title_well_detail">Detaliile fîntînii</string>
    <string name="action_hide">Ascunde</string>
    <string name="action_show_legend">Legendă</string>
    <string name="menu_option_add_well">Adaugă o fîntînă</string>
    <string name="title_legend">Calitate (1-5)</string>
    <string name="legend_rate_0_3"> de la 0 pînă la 3</string>
    <string name="legend_rate_3_4">de la 3 pînă la 4</string>
    <string name="legend_rate_4_5_1">de la 4 pînă la 5.1</string>
    <string name="field_latitude">Latitudine</string>
    <string name="field_longitude">Longitudine</string>
    <string name="field_water_properties">Proprietățile apei din fîntînă</string>
    <string name="field_appearance">Aspect</string>
    <string name="field_taste">Gust</string>
    <string name="field_smell">Miros</string>
    <string name="field_well_coordinates">Coordonatele GPS ale fîntînii</string>
    <string name="field_marked_point_on_map_coordinates">Coordonatele GPS ale punctului marcat pe hartă</string>
    <string name="hint_note">Notă</string>
    <string name="field_note">Notă</string>
    <string name="field_total_rating_">Rating total:</string>
    <string name="field_appearance_">Aspect:</string>
    <string name="field_taste_">Gust:</string>
    <string name="field_smell_">Miros:</string>
    <string name="partener_web_address">http://fusionworks.md</string>
    <string name="title_activity_mark_apoint_on_map">MarkAPointOnMapActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_about_app">Despre aplicație</string>
    <string name="health_text" formatted="false"><html><body>
        <b>METODA DE TRATAMENT</b>
        Ce se intampla in corp cand bem apa?
Ralph Vornehm a prezentat componenta de apa a fiecarui organ din corpul omenesc, incepand cu celulele, sangele, neurotransmitatorii si terminand cu organele.
Astfel, creierul contine 90% apa, ceea ce explica intr-un fel capacitatea acestuia de a transmite mesajele catre toate organele cu viteze uluitoare; neurotransmitatorii - responsabili de transmiterea acestor mesaje - contin tot 90% apa.
Este de inteles atunci, de ce cand nu bem apa, nu mai simtim cu timpul senzatia de sete. Neurotransmitatorii deshidratati nu mai transmit corect mesajul "mi-e sete", asa incat setea incepe sa mistuie corpul, incep durerile (si ele semnale de deshidratare) si patologia multor organe. "Celulele corpului nostru nu se ating intre ele, pentru ca inoata in apa, la fel ca si nervii"- R. Vornehm

Ce se intampla cand apa din corp este murdara?


Celulele comunica printr-un sistem de tip bio-laser. Exista un tip de apa in interiorul celulei si alt tip de apa in afara ei. Schimbul intre acestea purifica celula si o ajuta sa functioneze corect.
Daca nu bem apa regulat, celulele se intoxica. Cind membrana unei celule nu este bine hidratata, corpul declanseaza un mecanism de urgenta, ca forma de aparare si de hidratare. Corpul se protejeaza de deshidratare cu ajutorul colesterolului.
Membrana se imbraca intr-o pelicula protectoare, ca o crema, care impiedica uscarea. Ce este aceasta pelicula? Surpriza, este colesterol.


Corpul nostru se protejeaza de deshidratare cu ajutorul colesterolului

Studiile efectuate au aratat ca, in 90% din cazuri, colesterolul scade in 21 de zile de baut apa corect, ceea ce inseamna ca in 90% din cazuri colesterolul este crescut din cauza deshidratarii.
Ralph Vornehm arata ca celulele deshidratate se afla intr-un fel de sfera intunecata, dupa care devin mutante si se ajunge la cancer (studiile facute pe celulele canceroase au aratat ca acestea nu mai comunica intre ele).


Ce se intampla la nivelul sistemului digestiv daca nu bem apa inainte de masa (o cana, cu o jumatate de ora inainte de masa, NU SE BEA APA IN TIMPUL MESEI !!)?


Corpul nostru are nevoie de sange pentru a efectua procesul digestiv si este binecunoscut faptul ca sangele este compus 80% din apa.
Pentru a efectua corect procesul de digestie, sangele trebuie sa fie hidratat corect inainte de masa. Altfel sangele se ingroasa si de aceea, pentru a se hidrata extrage apa din organele vitale.
In organismul nostru fiecare celula, fiecare componenta "lupta" pentru a-si intretine viata proprie, ceea ce face ca, in ultima instanta, sa conduca spre viata intregului organism.
Sangele nu face exceptie de la acest principiu, asa incat, este extrem de important sa bem apa cu o jumatate de ora inainte de masa.
Sangele nu va mai extrage apa din organele vitale pentru a realiza procesul de digestie, iar corpul va ramane sanatos.
Sunt oameni care tusesc, ii apasa inima sau au colici dupa masa. Acele organe care ne dor dupa ce mancam sesizeaza ca nu au destula apa", spune Ralph Vornehm.

La nivelul cartilagiilor, componenta apei este de 90%

Cand cartilagiul este deshidratat, incepe sa pocneasca. Oasele au nevoie de apa in aceeasi masura si multe dintre durerile de oase, precum si sindromul de alunecare al discului lombar sunt cauzate de deshidratare. Tensiunea arteriala mare, problemele legate de vasele de sange sunt cauzate de lipsa apei din corp.
Presupunem, insa, ca durerile sunt mai mult decat o rugaminte pe care corpul ne-o trimite.
Durerea trebuie sa fie un mare strigat de ajutor, care s-ar putea traduce: "Ajutor, mi-e sete de nu mai pot!".

BETI APA PE STOMACUL GOL


In Japonia zilelor nostre este foarte popular obiceiul de a bea apa imediat dupa trezire, in fiecare dimineata. Mai mult, testele cercetatorilor au demonstrat valoarea acestui obicei.
Publicam mai jos o descriere a folosirii apei, pentru cititorii nostri.
Pentru cei in varsta si pentru bolile grave ca si pentru bolile moderne, tratamentul cu apa a fost considerat de succes de catre o societate medicala japoneza, ca tratament sigur 100% pentru urmatoarele boli:
dureri ale corpului; dureri de cap; sistemul circulator; artrita; batai puternice ale inimii; epilepsie; grasimi in exces; astm bronsic; tuberculoza; meningita; boli de ficat si urina; voma; gastrita; diaree; hemoroizi; diabet ; constipatie; toate bolile de ochi; cancer la organele genitale si dere glari menstruale; boli ale urechilor, nasului si gatului.

<b>METODA DE TRATAMENT</b><br/><br/>


1.Dimineata, imediat dupa trezire, inainte de a va spala pe dinti, beti 4x 160 ml apa
( aproximativ o jumatate de litru in total)
2. Spalati-va pe dinti dar nu mancati si nu beti nimic 45 minute.
3. Dupa 45 minute puteti bea si manca normal.
4. Dupa 15 minute de la micul dejun, pranz sau cina nu mancati si nu beti nimic timp de 2 ore.
5. Cei care sunt batrani sau bolnavi si nu pot bea 4 pahare cu apa dimineata pe stomacul gol, pot incepe prin a bea apa mai putina si sa creasca gradual pana la 4 pahare.
6. Metoda de mai sus va vindeca bolile si toata lumea se poate bucura de o viata sanatoasa.

Urmatoarea lista da numarul de zile de tratament necesar pentru vindecarea/ controlul/ reducerea principalelor boli:


1. Presiune ridicata a sangelui- 30 zile;
2. Gastrita - 10 zile
3. Diabet - 30 zile
4. Constipatie- 10 zile
5. Cancer- 180 zile
6. Tuberculoza- 90 zile
7. Pacientii cu artrita ar trebui sa urmeze tratamentul de mai sus doar 3 zile in prima
saptamana si incepand din a doua saptamana zilnic. Aceasta metoda de tratament nu are efecte adverse; oricum, la inceputul tratamentului s-ar putea sa fie necesar sa urinati mai des ca de obicei.
Este si mai bine daca continuati acest tratament ca pe o activitate de rutina in viata voastra.

Beti apa curata si ramaneti sanatosi si activi.
Nu beti apa la masa!


Celor carora le place sa bea apa rece, la masa, le sunt adresate aceste randuri: Apa rece va solidifica mancarurile uleioase pe care tocmai le-ati consumat.
Va va incetini digestia. Odata ce acest "noroi" reactioneaza cu acidul din stomac, va fi absorbit mai repede decat hrana solida. Va depune un strat pe intestine.
Foarte curand, acesta se va transforma in grasime si reziduuri si va duce la cancer.

Este cel mai indicat sa beti supa fierbinte sau apa calda dupa masa.
O nota importanta despre atacurile de inima:


Ar trebui sa se stie ca nu fiecare simptom de atac de inima va fi durerea in mana stanga.
Fiti atenti la durerile intense in maxilar.
S-ar putea sa nu ai prima data durere in piept, in timpul unui atac de inima.
Greata si transpiratul intens sunt si ele simptome obisnuite. 60% din persoanele care au atac de inima in timp ce dorm, nu se trezesc...
Durerea in maxilar va poate trezi dintr-un somn adanc. Fiti cu grija si atenti... Cu cat stim mai multe, cu atat sansele de a supravietui sunt mai mari.
Un cardiolog spunea ca, daca fiecare din cei care primesc acest mail, il trimite la toti cunoscutii sai, putem fi siguri ca vom salva cel putin o viata.
</body></html>
    </string>
    <string name="field_about_app">Aquamea informează oamenii despre calitatea apei potabile și modul în care acestea se pot proteja.</string>
    <string name="field_partener">Dezvoltat în colaborare cu</string>
    <string name="field_version">Versiune 1.0.0</string>
    <string name="field_contact">Suntem în contact</string>
    <string name="field_contact_email">info@fusionworks.md</string>
</resources>