<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/legendInfoLayout"
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <md.fusionworks.aquamea.ui.view.TypefaceTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_legend"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_size_small"
            app:typeface="font/Roboto-Regular.ttf" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center|left"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_map_marker_black_24dp"
                android:tint="#ff0000" />

            <md.fusionworks.aquamea.ui.view.TypefaceTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/legend_rate_0_3"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_size_small"
                app:typeface="font/Roboto-Regular.ttf" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center|left"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_map_marker_black_24dp"
                android:tint="#00ff00" />

            <md.fusionworks.aquamea.ui.view.TypefaceTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/legend_rate_3_4"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_size_small"
                app:typeface="font/Roboto-Regular.ttf" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center|left"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_map_marker_black_24dp"
                android:tint="#0000ff" />

            <md.fusionworks.aquamea.ui.view.TypefaceTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/legend_rate_4_5_1"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_size_small"
                app:typeface="font/Roboto-Regular.ttf" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/hideShowLegendInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center"
        android:padding="8dp">

        <md.fusionworks.aquamea.ui.view.TypefaceTextView
            android:id="@+id/hideShowLegendInfoField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_size_medium"
            app:typeface="font/Roboto-Regular.ttf" />
    </LinearLayout>
</merge>