<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:view="http://schemas.android.com/apk/res-auto"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logoView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8.0dip"
            android:layout_marginTop="35.0dip"
            android:background="@drawable/aquamea_logo3"/>

        <md.fusionworks.aquamea.ui.widget.TypefaceTextView
            android:id="@+id/aquameaField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoView"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15.0dip"
            android:layout_marginLeft="@dimen/content_padding_normal"
            android:layout_marginRight="@dimen/content_padding_normal"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="#a5a5a5"
            android:textColorLink="#ff6da3bd"
            android:textSize="22.0sp"
            view:typeface="font/Roboto-Light.ttf"/>

        <md.fusionworks.aquamea.ui.widget.TypefaceTextView
            android:id="@+id/aboutField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/aquameaField"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/content_padding_normal"
            android:layout_marginRight="@dimen/content_padding_normal"
            android:gravity="center_horizontal"
            android:paddingTop="5.0dip"
            android:text="@string/field_about_app"
            android:textColor="@color/secondary_text"
            android:textColorLink="#ff6da3bd"
            android:textSize="17.0sp"
            view:typeface="font/Roboto-Regular.ttf"/>

        <View
            android:id="@+id/divider1"
            android:layout_width="240.0dip"
            android:layout_height="1.0dip"
            android:layout_below="@+id/aboutField"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27.0dip"
            android:background="@color/divider"/>

        <md.fusionworks.aquamea.ui.widget.TypefaceTextView
            android:id="@+id/partnerField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider1"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:paddingTop="27.0dip"
            android:text="@string/field_partener"
            android:textColor="@color/secondary_text"
            android:textSize="17.0sp"
            view:typeface="font/Roboto-Light.ttf"/>

        <ImageView
            android:id="@+id/partnerLogoField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/partnerField"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2.0dip"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="3.0dip"
            android:src="@drawable/fusionworks_logo"
            android:textColor="@color/primary_text"/>

        <View
            android:id="@+id/divider2"
            android:layout_width="240.0dip"
            android:layout_height="1.0dip"
            android:layout_below="@+id/partnerLogoField"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24.0dip"
            android:background="@color/divider"/>

        <md.fusionworks.aquamea.ui.widget.TypefaceTextView
            android:id="@+id/versionField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider2"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:paddingTop="27.0dip"
            android:text="@string/field_version"
            android:textColor="@color/secondary_text"
            android:textSize="17.0sp"
            view:typeface="font/Roboto-Light.ttf"/>

        <View
            android:id="@+id/divider3"
            android:layout_width="240.0dip"
            android:layout_height="1.0dip"
            android:layout_below="@+id/versionField"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27.0dip"
            android:background="@color/divider"/>

        <md.fusionworks.aquamea.ui.widget.TypefaceTextView
            android:id="@+id/contactField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider3"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:paddingTop="20.0dip"
            android:text="@string/field_contact"
            android:textColor="@color/secondary_text"
            android:textSize="17.0sp"
            view:typeface="font/Roboto-Light.ttf"/>

        <md.fusionworks.aquamea.ui.widget.TypefaceTextView
            android:id="@+id/emailField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contactField"
            android:layout_centerHorizontal="true"
            android:autoLink="none"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:text="@string/field_contact_email"
            android:textColor="#ff6da3bd"
            android:textSize="17.0sp"
            view:typeface="font/Roboto-Light.ttf"/>

        <View
            android:id="@+id/divider4"
            android:layout_width="240.0dip"
            android:layout_height="1.0dip"
            android:layout_below="@+id/emailField"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27.0dip"
            android:background="@color/divider"/>

        <md.fusionworks.aquamea.ui.widget.TypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider4"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="35.0dip"
            android:gravity="center_horizontal"
            android:paddingTop="20.0dip"
            android:text="@string/field_made_in_moldova"
            android:textColor="@color/secondary_text"
            android:textSize="17.0sp"
            view:typeface="font/Roboto-Light.ttf"/>
    </RelativeLayout>
</ScrollView>