<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_background"
    android:descendantFocusability="beforeDescendants"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="md.fusionworks.aquamea.ui.activity.MarkAPointOnMapActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <android.support.v7.widget.CardView
        android:id="@+id/coordinatesCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/element_spacing_normal"
        android:layout_marginLeft="@dimen/content_padding_normal"
        android:layout_marginRight="@dimen/content_padding_normal"
        android:layout_marginTop="@dimen/element_spacing_normal"
        card_view:cardCornerRadius="@dimen/card_corner_radius"
        card_view:cardElevation="@dimen/card_elevation"
        card_view:cardPreventCornerOverlap="true"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <md.fusionworks.aquamea.ui.widget.TypefaceTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/content_padding_normal"
                android:text="@string/field_marked_point_on_map_coordinates"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/text_size_medium"
                view:typeface="font/Roboto-Regular.ttf" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="20dp"
                android:weightSum="100">

                <md.fusionworks.aquamea.ui.widget.TypefaceTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/element_spacing_normal"
                    android:layout_weight="50"
                    android:gravity="right"
                    android:text="@string/field_latitude"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/text_size_medium"
                    view:typeface="font/Roboto-Regular.ttf" />

                <md.fusionworks.aquamea.ui.widget.TypefaceTextView
                    android:id="@+id/latitudeField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:singleLine="true"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/text_size_medium"
                    view:typeface="font/Roboto-Regular.ttf" />
            </LinearLayout>

            <include
                layout="@layout/divider_view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/content_padding_normal"
                android:layout_marginRight="@dimen/content_padding_normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="20dp"
                android:weightSum="100">

                <md.fusionworks.aquamea.ui.widget.TypefaceTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/element_spacing_normal"
                    android:layout_weight="50"
                    android:gravity="right"
                    android:text="@string/field_longitude"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/text_size_medium"
                    view:typeface="font/Roboto-Regular.ttf" />

                <md.fusionworks.aquamea.ui.widget.TypefaceTextView
                    android:id="@+id/longitudeField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:singleLine="true"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/text_size_medium"
                    view:typeface="font/Roboto-Regular.ttf" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>
